<resources>
    <string name="app_name">RX130_CC2650</string>
    <string name="app_label">Renesas-Texes Instrument</string>
    <string name="CapSense_BLE">Renesas Capacitive Sensing with BLE</string>
    <string name="ble_not_supported">BLE is not supported</string>
    <string name="error_bluetooth_not_supported">Bluetooth not supported.</string>
    <string name="menu_scan">Scan</string>
    <string name="menu_stop">Stop</string>
    <string name="connected">Connected</string>
    <string name="disconnected">Disconnected</string>
    <string name="no_data">No data</string>
    <string name="btnStatus">Status</string>
    <string name="button_connect">Connect</string>
    <string name="str_imgGreenLED">Green</string>
    <string name="str_imgRedLED">Red</string>
    <string name="str_imgYellowLED">Yellow</string>
    <string name="str_btnGreen">Green</string>
    <string name="str_btnYellow">Yellow</string>
    <string name="str_btnRed">Red</string>
    <string name="tv_Alert">Alert</string>
    <string name="tv_device_address">Device_Address</string>
    <string name="tv_connected">Connected</string>
    <string name="tv_device_name">Device_Name</string>
    <string name="tv_rssi">rssi</string>
    <string name="tv_step">Number of Steps</string>
    <string name="unknown_characteristic">Unknown characteristic</string>
    <string name="unknown_service">Unknown service</string>
    <string name="address">Address</string>\
</resources>
